sistemate la datatable infernali per lo showAll e lo showAllValutazioni

--- a/src/main/resources/templates/accreditamento/accreditamentoValidate.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoValidate.html
@@ -172,8 +172,7 @@
 									data-toggle="modal" data-target=".modal-showAll"></a></li>
 								<!-- mostra showAllValutazioni -->
 								<li><a type="button" class="ajaxCallShowAllValutazioni"
-									th:text="#{label.mostra_riepilogo_valutazioni}"
-									data-toggle="modal" data-target=".modal-showAllValutazioni"></a></li>
+									th:text="#{label.mostra_riepilogo_valutazioni}"  data-toggle="modal" data-target=".modal-showAllValutazioni"></a></li>
 								<li class="divider actions"></li>
 								<li><a th:if="${accreditamentoWrapper.canConfermaValutazione}"
 									th:text="#{label.conferma_valutazione}" data-toggle="modal" data-target=".modal-confirm"></a></li>
