--- a/src/main/resources/templates/valutazione/valutazioneValutatoriAll.html
+++ b/src/main/resources/templates/valutazione/valutazioneValutatoriAll.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<th:block th:fragment="valutatoriAll(wrapper)">
-		<table id="tabella-modale" class="datatable-responsive-search-validation table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
+		<table class="datatable-responsive-search-validation table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
 			<thead>
 				<tr>
 					<th th:text="#{label.id}">label.id</th>
