--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -24,10 +24,8 @@
 				th:src="@{/gentella/js/wizard/jquery.smartWizard.js}"></script>
 
 		<!-- DataTable -->
-<!-- 		<script src="../static/gentella/js/datatables/jquery.dataTables.min.js" -->
-<!-- 				th:src="@{/gentella/js/datatables/jquery.dataTables.min.js}"></script> -->
-<script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.10.12/datatables.min.js"></script>
-
+		<script src="../static/gentella/js/datatables/jquery.dataTables.min.js"
+				th:src="@{/gentella/js/datatables/jquery.dataTables.min.js}"></script>
 		<script src="../static/gentella/js/datatables/dataTables.bootstrap.js"
 				th:src="@{/gentella/js/datatables/dataTables.bootstrap.js}"></script>
 		<script src="../static/gentella/js/datatables/dataTables.buttons.min.js"
@@ -78,6 +76,20 @@
 		<script
 			src="../static/backToTop/js/modernizr.js"
 			th:src="@{/backToTop/js/modernizr.js}"></script>
+
+		<!-- calendar -->
+		<script src="../static/gentella/js/moment/moment.min.js"
+				th:src="@{/gentella/js/moment/moment.min.js}"></script>
+		<script src="../static/gentella/js/calendar/fullcalendar.min.js"
+				th:src="@{/gentella/js/calendar/fullcalendar.min.js}"></script>
+
+		<!-- dateRangePicker -->
+		<script src="../static/gentella/js/datepicker/daterangepicker.js"
+				th:src="@{/gentella/js/datepicker/daterangepicker.js}"></script>
+
+		<!-- clockpicker -->
+		<script src="../static/clockpicker/js/clockpicker.js"
+				th:src="@{/clockpicker/js/clockpicker.js}"></script>
 
 		<!-- spin.js loading spinner -->
 		<script
@@ -346,6 +358,25 @@
 					});
 				});
 			});
+
+			function getDayNamesShort() {
+				var array = [
+								[[#{dayshort.domenica}]], [[#{dayshort.lunedi}]], [[#{dayshort.martedi}]],
+								[[#{dayshort.mercoledi}]], [[#{dayshort.giovedi}]], [[#{dayshort.venerdi}]],
+								[[#{dayshort.sabato}]]
+				             ];
+				return array;
+			}
+
+			function getMonthNames() {
+				var array = [
+								[[#{month.gennaio}]], [[#{month.febbraio}]], [[#{month.marzo}]],
+								[[#{month.aprile}]], [[#{month.maggio}]], [[#{month.giugno}]],
+								[[#{month.luglio}]], [[#{month.agosto}]], [[#{month.settembre}]],
+								[[#{month.ottobre}]], [[#{month.novembre}]], [[#{month.dicembre}]]
+				            ];
+				return array;
+			}
 
 			/*]]>*/
 		</script>
