--- a/src/main/resources/templates/seduta/sedutaEdit.html
+++ b/src/main/resources/templates/seduta/sedutaEdit.html
@@ -7,13 +7,14 @@
 <body>
 	<div layout:fragment="content">
 		<div class="row">
+
 			<div class="col-xs-12">
 				<div class="x_panel">
 					<div class="x_title">
-						<h2 th:text="${seduta.id} ? #{label.modifica_seduta(${#temporals.format(seduta.data, 'dd/MM/yyyy')})} : #{label.inserimento_seduta}">Seduta</h2>
+						<h2 th:text="${sedutaWrapper.seduta.id} ? #{label.modifica_seduta(${#temporals.format(sedutaWrapper.seduta.data, 'dd/MM/yyyy')})} : #{label.inserimento_seduta}">Seduta</h2>
 						<div class="pull-right buttons-header">
-							<label th:if="${canEdit}" class="btn btn-success pull-right" th:text="#{label.salva}" for="submitButton"></label>
-							<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="${seduta.id != null} ? @{|/seduta/${seduta.id}/show|} : @{|/seduta/list|}"></a>
+							<label th:if="${sedutaWrapper.canEdit}" class="btn btn-success pull-right" th:text="#{label.salva}" for="submitButton"></label>
+							<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="${sedutaWrapper.seduta.id != null} ? @{|/seduta/${sedutaWrapper.seduta.id}/show|} : @{|/seduta/list|}"></a>
 						</div>
 						<div class="clearfix"></div>
 					</div>
@@ -26,14 +27,13 @@
 			/*<![CDATA[*/
 
 				$(document).ready(function() {
-					$(".domande-table-edit").DataTable( {
+					$(".domande-table-show").DataTable( {
 						"bFilter" : false,
 						"bInfo" : false,
 						"bPaginate" : false,
 						"ordering" : false,
 						"columnDefs": [
-							{"targets": 0, "width": "72px", "sClass": "center" },
-							{"targets": 3, "width": "1px", "sClass": "center"},
+							{"targets": 0, "width": "1px", "sClass": "center" }
 						],
 					})
 
@@ -67,6 +67,7 @@
 				    	e.stopPropagation();
 	                    handler.clockpicker('show');
 				    })
+
 				})
 
 			/*]]>*/
