--- a/src/main/resources/templates/seduta/sedutaHandle.html
+++ b/src/main/resources/templates/seduta/sedutaHandle.html
@@ -73,6 +73,57 @@
 				</div>
 			</div>
 
+			<!-- modale spostamento valutazioneCommissione -->
+			<div id="moveVal-modal" class="modal fade modal-moveVal"
+				data-model-index="1" role="dialog">
+				<div class="modal-dialog modal-lg">
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal">
+								<span aria-hidden="true">×</span>
+							</button>
+							<h4 class="modal-title" id="myModalLabel"
+								th:text="#{label.seleziona_altro_ODG}">Seleziona l'Ordine del Giorno nel quale spostare la domanda</h4>
+						</div>
+						<div class="modal-body">
+							<form id="formMoveValCommissione" class="form-horizontal"
+								method="post" enctype="multipart/form-data"
+								novalidate="novalidate">
+
+								<div class="item form-group" th:classappend="${#fields.hasErrors('sedutaWrapper.sedutaTarget')} ? 'bad'">
+									<label class="control-label col-md-3 col-sm-3 col-xs-11">
+										<span th:text="#{label.seduta_target}">Seduta nella quale spostare la Domanda</span>
+										<span class="required">*</span>
+									</label>
+									<div class="col-lg-6 col-md-8 col-sm-8 col-xs-12">
+										<button th:if="${#lists.isEmpty(sedutaWrapper.seduteSelezionabili)}" type="button" disabled="disabled" class="btn btn-primary single" th:text="#{label.nessuna_seduta_selezionabile}"></button>
+										<select id="selectAccreditamenti" class="selectpicker required" th:unless="${#lists.isEmpty(sedutaWrapper.seduteSelezionabili)}"
+													th:field="${sedutaWrapper.sedutaTarget}"
+													data-width="100%"
+													data-style="btn-primary"
+													data-size="10" title="Seleziona Seduta...">
+											<option th:each="domanda, row : ${sedutaWrapper.seduteSelezionabili}" th:value="${domanda.id}"
+												th:text="#{label.opzione_selezione_seduta(${#numbers.formatInteger(domanda.id, 3, 'NONE')}, ${#temporals.format(domanda.data, 'dd/MM/yyyy')}, ${domanda.ora})}">
+											</option>
+										</select>
+									</div>
+									<div th:if="${#fields.hasErrors('sedutaWrapper.sedutaTarget')}" class="alert" th:errors="${sedutaWrapper.sedutaTarget}"></div>
+								</div>
+
+								<input type="hidden" name="editId" th:value="${sedutaWrapper.seduta.id}" />
+		                   		<input type="hidden" th:field="${sedutaWrapper.canEdit}" />
+		                   		<input type="hidden" th:field="${sedutaWrapper.seduteSelezionabili}" />
+								<input id="submitButtonModal2" type="submit" style="display: none;" />
+								<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />							</form>
+						</div>
+						<div class="modal-footer">
+         						<label for="submitButtonModal2" class="btn btn-success pull-right" th:text="#{label.salva}">Salva</label>
+         						<button type="button" class="btn btn-primary pull-right" data-dismiss="modal" th:text="#{label.chiudi}">Chiudi</button>
+       					</div>
+					</div>
+				</div>
+			</div>
+
 
 			<div class="col-xs-12">
 				<div class="x_panel">
@@ -103,7 +154,22 @@
 						],
 					})
 
+					if([[${modalError}]]) {
+						$("#valCommissione-modal").modal("show");
+					}
+
+					if([[${modalErrorMove}]] != null) {
+						$("#moveButton" + [[${modalErrorMove}]]).click();
+					}
+
 				})
+
+				//setta l'action del from per spostare la seduta
+				function prepareFormMove(id) {
+					url = [[@{|/seduta/${sedutaWrapper.seduta.id}/valutazioneCommissione/|}]] + id + "/move";
+					$("#formMoveValCommissione").attr("action", url);
+					$("#moveVal-modal").modal("show");
+				}
 
 			/*]]>*/
 			</script>
