--- a/src/main/resources/templates/seduta/sedutaList.html
+++ b/src/main/resources/templates/seduta/sedutaList.html
@@ -25,7 +25,7 @@
 
 						<div id='calendar'></div>
 
-						<div class="divider"></div>
+						<div class="divider with-margin-bottom with-margin-top"></div>
 
 						<h2 th:text="#{label.sedute_inserite}"></h2>
 
