--- a/src/main/resources/templates/seduta/sedutaFragment.html
+++ b/src/main/resources/templates/seduta/sedutaFragment.html
@@ -10,7 +10,8 @@
 	<th:block th:fragment="seduta(mode)">
 		<th:block th:with="editabile=${mode == 'edit'},
 			showOnly=${mode == 'show'},
-			gestibile=${mode == 'handle'}">
+			gestibile=${mode == 'handle'},
+			valutabile=${mode == 'validate'}">
 
 			<!-- ogni parte non in comune tra sarà gestita in maniera appropriata -->
 			<div class="x_content">
@@ -26,7 +27,7 @@
 						<div class="item form-group" th:classappend="${#fields.hasErrors('sedutaWrapper.seduta.data')} ? 'bad'">
 							<span class="col-xs-1"></span>
 		                    <label class="control-label col-md-3 col-sm-3 col-xs-11" for="dataInput">
-		                    	<span th:class="${showOnly or gestibile ? 'label-show' : ''}" th:text="#{label.data}">Data</span>
+		                    	<span th:class="${!editabile ? 'label-show' : ''}" th:text="#{label.data}">Data</span>
 							</label>
 							<th:block th:if="${editabile}">
 								<div class="col-lg-3 col-md-4 col-sm-4 col-xs-12 input-group datapick">
@@ -38,7 +39,7 @@
 								</div>
 
 							</th:block>
-							<th:block th:if="${showOnly or gestibile}">
+							<th:block th:unless="${editabile}">
 			           			<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 			              			<div class="value" th:text="${#temporals.format(sedutaWrapper.seduta.data, 'dd/MM/yyyy')}"></div>
 		                    	</div>
@@ -52,7 +53,7 @@
 						<div class="item form-group" th:classappend="${#fields.hasErrors('sedutaWrapper.seduta.ora')} ? 'bad'">
 		                    <span class="col-xs-1"></span>
 		                    <label class="control-label col-md-3 col-sm-3 col-xs-11">
-		                      	<span th:class="${showOnly or gestibile ? 'label-show' : ''}" th:text="#{label.ora}">Ora</span>
+		                      	<span th:class="${!editabile ? 'label-show' : ''}" th:text="#{label.ora}">Ora</span>
 		                    </label>
 		                    <th:block th:if="${editabile}">
 			                    <div class="col-lg-3 col-md-4 col-sm-4 col-xs-12 input-group">
@@ -63,7 +64,7 @@
     								</span>
 								</div>
 							</th:block>
-							<th:block th:if="${showOnly or gestibile}">
+							<th:block th:unless="${editabile}">
 			           			<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 			              			<div class="value" th:text="${#temporals.format(sedutaWrapper.seduta.ora, 'HH:mm')}"></div>
 		                    	</div>
@@ -77,7 +78,7 @@
 	                    <div class="item form-group" th:if="${sedutaWrapper.seduta.id != null}">
 	                    	<span class="col-xs-1"></span>
 		                    <label class="control-label col-md-3 col-sm-3 col-xs-11">
-		                      	<span th:class="${showOnly ? 'label-show' : ''}" th:text="#{label.domande_accreditamento_in_odg}">Domande di accreditamento in ODG</span>
+		                      	<span th:class="${!editabile ? 'label-show' : ''}" th:text="#{label.domande_accreditamento_in_odg}">Domande di accreditamento in ODG</span>
 		                    </label>
 							<div th:if="${#lists.isEmpty(sedutaWrapper.seduta.valutazioniCommissione)}" class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 								<div class="with-padding-top value" th:text="#{label.nessuna_valutazione_commissione}"></div>
@@ -87,14 +88,16 @@
 								<div class="row" style="clear: both">
 									<div class="col-md-2 col-sm-2 col-xs-12"></div>
 									<div class="col-md-8 col-sm-8 col-xs-12">
-										<table id="tabDom" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%" th:classappend="${gestibile ? 'domande-table-edit' : 'domande-table-show'}">
+										<table id="tabDom" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%" th:classappend="${gestibile or valutabile ? 'domande-table-edit' : 'domande-table-show'}">
 											<thead>
 												<tr>
 													<th th:text="#{label.domanda_id}">ID Domanda</th>
 													<th th:text="#{label.provider}">Provider</th>
 													<th th:text="#{label.codice_fiscale}">Codice Fiscale</th>
 													<th th:text="#{label.oggetto_discussione}">Motivazione</th>
-													<th th:if="${sedutaWrapper.canEdit and gestibile}" th:text="#{label.azioni}"></th>
+													<th th:unless="${sedutaWrapper.canEdit}" th:text="#{label.valutazione_commissione_ECM}">Valutazione Commissione ECM</th>
+													<th th:unless="${sedutaWrapper.canEdit}" th:text="#{label.esito_valutazione}">Stato Domanda</th>
+													<th th:unless="${showOnly or editabile}" th:text="#{label.azioni}"></th>
 												</tr>
 											</thead>
 											<tbody>
@@ -103,9 +106,15 @@
 													<td th:text="${domanda.accreditamento.provider.denominazioneLegale}">nome_provider</td>
 													<td th:text="${domanda.accreditamento.provider.codiceFiscale}">codice_fiscale_provider</td>
 													<td th:text="${domanda.oggettoDiscussione}">oggetto_discussione</td>
+													<td th:unless="${sedutaWrapper.canEdit}" th:text="${domanda.valutazioneCommissione}">valutazione_commissione</td>
+													<td th:unless="${sedutaWrapper.canEdit}" th:text="${domanda.stato?.nome}">stato</td>
 													<td th:if="${sedutaWrapper.canEdit and gestibile}">
 														<a th:id="'moveButton'+${domanda.id}" class="btn btn-table btn-primary double" th:onclick="'prepareFormMove(' + ${domanda.id} + ')'"><i class="fa fa-mail-forward"></i> <span th:text="#{label.sposta}"></span></a>
 														<a class="btn btn-table btn-danger double" th:href="@{|/seduta/${sedutaWrapper.seduta.id}/valutazioneCommissione/${domanda.id}/remove|}"><i class="fa fa-trash"></i> <span th:text="#{label.elimina}"></span></a>
+													</td>
+													<td th:if="${!sedutaWrapper.canEdit and valutabile}">
+														<a th:id="'moveButton'+${domanda.id}" class="btn btn-table btn-primary double" th:onclick="'prepareFormMove(' + ${domanda.id} + ')'"><i class="fa fa-mail-forward"></i> <span th:text="#{label.sposta}"></span></a>
+														<a th:id="'validateButton'+${domanda.id}" class="btn btn-table btn-success double" th:onclick="'prepareFormValidate(' + ${domanda.id} + ', ' + ${domanda.accreditamento.id} + ')'"><i class="fa fa-pencil"></i> <span th:text="#{label.valuta}"></span></a>
 													</td>
 												</tr>
 											</tbody>
